--- a/index.Rmd
+++ b/index.Rmd
@@ -106,4 +106,12 @@ with_tooltip <- function(text, tooltip){
     )
   )
 }
+
+# Adding packages
+if (!requireNamespace("remotes")){
+  install.packages("remotes")
+}
+if (!requireNamespace("cloc")){
+  remotes::install_github("hrbrmstr/cloc")
+}
 ```
