target blank on links

--- a/big-shiny.Rmd
+++ b/big-shiny.Rmd
@@ -16,15 +16,19 @@ With small and simple Shiny apps, no knowledge of HTML, CSS or JavaScript is req
 
 ## What's a complex Shiny App? 
 
-> Complex software is harder to think about, harder to test, harder to debug, and harder to maintain — and above all, harder to learn and use.
+<!-- > Complex software is harder to think about, harder to test, harder to debug, and harder to maintain — and above all, harder to learn and use.
 
-`r right_link("The Art of Unix Programming", "http://www.catb.org/~esr/writings/taoup/html/ch01s06.html#id2878339")`
+`r right_link("The Art of Unix Programming", "http://www.catb.org/~esr/writings/taoup/html/ch01s06.html#id2878339")`-->
+
+> One of the unfortunate things about reality is that it often poses complex problems that demand complex solutions
+
+`r right_link("The Art of Unix Programming", "http://www.catb.org/~esr/writings/taoup/html/ch13s01.html")`
 
 ### Reaching the cliff of complexity
 
 Things are quite simple when it comes to small prototypes or proof of concepts. 
 But things change when your application reaches "the cliff of complexity"^[
-We borrow this term from Charity Major, as heard in _Test in Production with Charity Majors_, [CoRecursive](https://corecursive.com/019-test-in-production-with-charity-majors/)]{target="_blank"}.
+We borrow this term from Charity Major, as heard in _Test in Production with Charity Majors_, [CoRecursive](https://corecursive.com/019-test-in-production-with-charity-majors/){target="_blank"}].
 
 
 But what do we mean by complexity? 
@@ -105,7 +109,7 @@ The minification process is the process of removing all blank characters and put
 It also depends on your coding style and the packages you're using. 
 For example, [`{tidyverse}`](https://www.tidyverse.org/){target="_blank"} packages encourage the use of the pipe (`%>%`)
 ^[
-"_`%>%` should always have a space before it, and should usually be followed by a new line._", [tidyverse style guide](https://style.tidyverse.org/pipes.html) 
+"_`%>%` should always have a space before it, and should usually be followed by a new line._", [tidyverse style guide](https://style.tidyverse.org/pipes.html){target="_blank"}
 ] 
 with one function by line, producing more lines in the end code.
 
