--- a/big-shiny.Rmd
+++ b/big-shiny.Rmd
@@ -52,12 +52,12 @@ And conventions are crucial when it comes to building and maintaining complex sy
 +  Customers and users
 
 On the other hand, customers and end user see complexity as _interface complexity_. 
-Interface complexity can be driven by a lot of elements, for example the probability of making an error while using the app, the difficulty to understand the logical progression in the the app, the presence of unfamiliar behaviour or terms, visual distractions...
+Interface complexity can be driven by a lot of elements, for example the probability of making an error while using the app, the difficulty to understand the logical progression in the app, the presence of unfamiliar behaviour or terms, visual distractions...
 This book will also bring you strategy to help you cope with the need for simplification when it comes to designin interface. 
 
 #### Balancing complexities
 
-There is an inherent tension between these two source of complexity, as designing an app means finding a good balance between implementation ann interface complexity. 
+There is an inherent tension between these two source of complexity, as designing an app means finding a good balance between implementation and interface complexity. 
 Reducing implementation complexity means one has to make some decisions that will lower one while rising the other. 
 
 For example, we can think of something very common in Shiny: the "too much reactivity" pattern. 
