english version of #27

--- a/secure.Rmd
+++ b/secure.Rmd
@@ -4,61 +4,62 @@
 
 Friends don't let friends work on a coding project without version control. 
 
+### what is git ?
 
-git est un logiciel qui s'avere tres vite indispensable dans le cadre de la construction d'une application. il permet de :
+git is a software that quickly proves to be essential when building an application, or any other project, with a minimum of ambition. it allows you to :
 
-+ versionner son code
-+ travailler de maniere collaborative
-+ sauvegarder son code sur un serveur dédié
++ version his code
++ work collaboratively
++ save your code on a dedicated server
 
-Toute modification dans le code doit etre suivi et documentée, on doit être capable de savoir qui a fait quoi et quand, et pourquoi. 
-
-
-Si vous n'etes pas familier le git, n'aillez pas peur et le peu de contrainte imposé par l'usage de cet outil est largement compensé par les gains apportés.
-
-Git peut etre utilisé de différentes façons et différentes approches existent. L'exhausitivité des différentes approches possibles sortent du cadre de ce livre, et d'autres ressources existent par ailleurs. Nous vous invitons a suivre ces différents lien :
-
-+ un site avec une topo générale
-+ un site qui explicite git flow
-+ un site avec les question/reponses classique de ce que l'on souhaite faire avec git
+Any changes in the code must be tracked and documented, we must be able to know who did what and when, and why. 
 
 
-TODO / un dessin ?
+If you are not familiar with git, don't be afraid and the little constraint proposed by the use of this tool is largely compensated by the gains made.
 
+Git can be used in different ways and different approaches exist. The comprehensiveness of the different possible approaches is beyond the scope of this book, and other resources exist as well. We invite you to follow these different links:
 
-commit - push - pull
-
-Sans rentrer dans les détail, sachez que :
-vous allez faire des commit ( qui correspondent a des modifications que vous voulez figer),
-que chaque commit se documente ( exemple : "rajout du graphique dans l'onglet analyse de l'application" , ou "correction du bug d'export du docx").
-
-Un ensemble de commit, peut ensuite etre  envoyé sur le serveur, il s'agit d'un Push. Vos collaborateurs pourront alors récuperer vos modifications en faisant un pull.(et réciproquement)
-
-le trio commit - push - pull correspond aux outils du quotidien de git.
-
-Branche
-
-Dans les faits on utilise la notion de branche pour organiser son travail et ses idées ( ou pour ne pas se marcher sur les pieds entre collaborateurs).
-La branche principale s'appelle le master, dans l'idéal on ne travaille jamais directement dedans, et cette branche devrait toujours contenir une version fonctionelle, montrable de l'application.
-Les branche de dev correspondent a des zones de travail dans lesquelles ont tente de corriger des bugs ou ajouter des fonctionalités à l'application. Les modifications apportéee dans ces branches de dev seront ensuite deversées (directement ou non) dans la branche master ( ou release-candidate )
-
-concretement, un developpeur s'attaquant à la résolution d 'un soucis , fabriquera une nouvelle branche spécifique à la résultion de ce soucis
-
-Issue
-
-Des outils comme github ou gitlab permettent de suivre des issue ( bug ou fonctionnalité a faire),d'organiser ces tache dans un kanban, avec des dates d'échéance etc. Ces issues peuvent etre associé a des commit cela permet de discuter de ces issues entre collaborateur et beta testeur/commanditaire. Disposer d'une telle plateforme est un gain considérable dans la
-productivité. Et tout est y est centralisé
-
-Git s'intégre trés bien avec l'IDE Rstudio, ainsi, pendant que vous développez utiliser git peut se résumer à cliquer sur un bouton de temps en temps. (un bouton commit, un bouton pull et un bouton push)
-
-L'usage de git n'est pas réservé aux applications qui s'écrivent à plus de deux mains, et a partir de une personne utiliser git est une bonne idée et fait partie des bonnes pratiques.
-
-
-développer une application shiny, c'est avant tout développer une application. quelque soit le langage des outils dédiés à cela existent, git en fait parti. Et ce n'est pas parce q'uil s'agit de R, qu'il ne faut pas utiliser ces outils.
++ https://happygitwithr.com/
++ https://git-scm.com/book
++ https://www.git-tower.com/blog/git-cheat-sheet/
 
 
 
+### commit - push - pull
 
+Without going deeper, please note that:
+you will make commit (which corresponds to changes you want to freeze),
+that each commit is documented ( example: "adding the graph in the analysis tab of the application", or "fixing the docx export bug").
+
+A set of commit, can then be sent to the server, it is a Push. Your collaborators will then be able to recover your modifications by making a sweater (and vice versa)
+
+the commit - push - pull trio corresponds to the tools of git's daily life.
+
+### Branch
+
+In practice, we use the notion of branch to organize our work and ideas ( or to avoid stepping on our feet between collaborators).
+The main branch is called the master, ideally you never work directly in it, and this branch should always contain a functional, displayable version of the application.
+The dev branches correspond to work areas in which we try to fix bugs or add features to the application. The modifications made in these dev branches will then be transferred (directly or indirectly) to the master branch ( or release-candidate)
+
+in concrete terms, a developer addressing the resolution of a problem will produce a new branch specific to the result of that problem
+
+### Issue
+
+Tools like github or gitlab allow to follow issues (bug or feature to be done), to organize these tasks in a kanban, with due dates etc.. These issues can be associated with commits so that these issues can be discussed between collaborator and beta tester/sponsor. Having such a platform is a considerable gain in the
+productivity. And everything is centralized there
+
+Git integrates very well with the Rstudio IDE, so, while you develop using git can be as simple as clicking a button from time to time. (a commit button, a pull button and a push button)
+
+The use of git is not reserved for applications that can be written with more than two hands, and from a person to use git is a good idea and is part of good practice.
+
+
+Developing a shiny application is above all developing an application. Whatever the language of the tools dedicated to it exist, git is actually part of it. And just because it's about R, doesn't mean you shouldn't use these tools.
+
+
+
+
+
+Translated with www.DeepL.com/Translator
 
 
 
