--- a/index.Rmd
+++ b/index.Rmd
@@ -4,6 +4,7 @@ author: "Colin Fay, Vincent Guyader, Cervan Girard, Sébastien Rochette"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
 documentclass: book
+bibliography: [book.bib, packages.bib]
 biblio-style: apalike
 link-citations: yes
 description: "Building Robust Shiny Application - A Workflow"
@@ -119,4 +120,12 @@ if (!requireNamespace("remotes")){
 if (!requireNamespace("cloc")){
   remotes::install_github("hrbrmstr/cloc")
 }
+
+```
+
+```{r include=FALSE}
+# automatically create a bib database for R packages
+knitr::write_bib(c(
+  .packages(), 'bookdown', 'knitr', 'rmarkdown'
+), 'packages.bib')
 ```
