Add cloc to description

--- a/big-shiny.Rmd
+++ b/big-shiny.Rmd
@@ -145,7 +145,7 @@ Numerous files can also be a sign of maintenance complexity: it's harder to reas
 
 If you want to use this metric, you can do it straight from R with the `{cloc}` package, available at https://github.com/hrbrmstr/cloc.
 
-```{r eval = FALSE}
+```{r eval = TRUE}
 if (!requireNamespace("cloc")){
   remotes::install_github("hrbrmstr/cloc")
 }
