Chapter: Prototype - Rmd first
* Changed filename for organisation of the directory
* Updated _bookdown.yml accordingly

issue #103

--- a/prototyping-fakir-shinipsum.Rmd
+++ b/prototyping-fakir-shinipsum.Rmd
@@ -1,4 +1,4 @@
-# Tools for prototyping {#proto}
+# Tools for prototyping {#proto-tools}
 
 Building the User Interface first should require the least possible calculations from the server part of your application. 
 You focus on the appearance.  
