--- a/workflow.Rmd
+++ b/workflow.Rmd
@@ -15,6 +15,9 @@ To _Prototype_ is to define a visual proposition for the application.
 A Shiny application is a visual interface to communicate with end users. 
 The general appearance, position of the different inputs and outputs as well as graphical interactions need to be chosen with care. 
 In this part, we will propose the 'UI-first' method with tools to focus on the bodyshell of the app before engineering the engine.  
+The visual proposition also concerns graphs and tables that will really appear in the application.
+Prototyping outputs based on a selection of possible workflows of the future application is easier in a context without interactivity.
+The 'Rmd first' method comes handy to focus on the core of the application, develop functions and documentation of the package along with visual propositions on example data.  
 
 ## Part 3: Build 
 
